--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,58 @@
 .container {
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
+    /* grid-template-rows: repeat(5, 1fr); */
     gap: 10px;
 }
 
 .box {
     border: 3px solid #666;
-    background-color: #ddd;
+    background-color: #f8f9fa;
     border-radius: .5em;
     padding: 10px;
     cursor: move;
+}
+
+.border-color {
+    border-right-color: #4a6480;
+    border-right-width: 10px;
+}
+
+.color-gradient {
+    background: linear-gradient(to top, #09203f 0%, #537895 100%);
+}
+
+.height-header {
+    height: 120px;
+}
+
+.height-content {
+    height: 250px;
+}
+
+.font-family-header {
+    font-family: 'Poppins', sans-serif;
+}
+
+.title-header {
+    padding-top: 25px;
+    text-align: center;
+    color: white;
+    font-size: 25px;
+}
+
+.form-right {
+    float: right;
+}
+
+.btn-grad {
+    background-image: linear-gradient(to right, #06beb6 0%, #48b1bf 51%, #06beb6 100%);
+}
+
+.header-content {
+    margin: unset;
+    background: gainsboro;
+}
+
+.mg-top {
+    margin-top: 100px;
 }
